Main page updated with my info.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Coursera frontend course assignments by bikush</title>
+    <title>Coursera frontend course assignments</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,15 +16,13 @@
     <div class="wrapper">
       <header>
         <h1>Coursera frontend course assignments</h1>
-        <p>Assignments for Coursera &quot;HTML, CSS, and Javascript for Web Developers&quot; course.</p>
-
-        <p class="view"><a href="https://github.com/bikush/coursera-frontend-dev-course">View the Project on GitHub <small>bikush/coursera-frontend-dev-course</small></a></p>
-
-
+        <p>Assignments for Coursera <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers">&quot;HTML, CSS, and Javascript for Web Developers&quot;</a> course.</p>
+		<p>The asignment solutions were created by Bruno Mikuš.</p>
+		
         <ul>
-          <li><a href="https://github.com/bikush/coursera-frontend-dev-course/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/bikush/coursera-frontend-dev-course/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/bikush/coursera-frontend-dev-course">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://www.coursera.org/">Visit <strong>Coursera</strong></a></li>
+		  <li><a href="https://github.com/bikush/coursera-frontend-dev-course/tree/gh-pages">View <strong>Sources</strong></a></li>
+          <li><a href="https://github.com/bikush/" target="_blank">More by <strong>Bruno</strong></a></li>
         </ul>
       </header>
       <section>
