Updated main gh-pages index page.

--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
 
 <h3>
 <a id="module-2" class="anchor" href="#module-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Module 2</h3>
-
-<p>Module 2 assignment solution is <a href="module-2/index.html">here</a>.</p>
+<p>Module 2  <a href="http://bit.ly/1mIFcMr" target="_blank">assignment</a> and the <a href="module-2/index.html">solution</a>.</p>
 
 <h3>
 <a id="module-3" class="anchor" href="#module-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Module 3</h3>
-
-<p>I am yet to listen to module 3 classes.</p>
+<p>Module 3  <a href="http://bit.ly/1mKZzJ5" target="_blank">assignment</a> and the <a href="module-3/index.html">solution</a>.</p>
 
 <h3>
 <a id="module-4" class="anchor" href="#module-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Module 4</h3>
-
-<p>I am yet to listen to module 4 classes.</p>
+<p>I am to implement the module 4 assignment.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
